--- a/app/src/main/res/layout/activity_penugasan_.xml
+++ b/app/src/main/res/layout/activity_penugasan_.xml
@@ -53,14 +53,17 @@
             android:layout_height="match_parent">
 
             <LinearLayout
-                android:padding="5dp"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" >
+                android:layout_margin="10dp"
+                android:orientation="vertical"
+                android:padding="5dp">
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
+
                     <android.support.design.widget.TextInputLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content">
@@ -75,6 +78,7 @@
                             android:maxLines="1"
                             android:singleLine="true" />
                     </android.support.design.widget.TextInputLayout>
+
                     <ProgressBar
                         android:id="@+id/pb_NamaMekanik"
                         style="?android:attr/progressBarStyleSmall"
@@ -82,42 +86,49 @@
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical|right"
                         android:layout_marginRight="5dp"
-                        android:visibility="gone"/>
+                        android:visibility="gone" />
                 </FrameLayout>
 
-                    <TextView
-                        android:id="@+id/txtStatus"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Status" />
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/txtStatus"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:text="Status" />
 
-                        <RadioGroup
-                            android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp"
+                    android:orientation="horizontal">
+
+                    <RadioGroup
+                        android:id="@+id/radio"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <RadioButton
+                            android:id="@+id/rbon"
+                            android:layout_width="wrap_content"
+
                             android:layout_height="wrap_content"
-                            android:id="@+id/radio">
-                            <RadioButton
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
+                            android:text="On"></RadioButton>
 
-                                android:id="@+id/rbon"
-                                android:text="On"></RadioButton>
-                            <RadioButton
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:id="@+id/rboff"
-                                android:text="Off"></RadioButton>
+                        <RadioButton
+                            android:id="@+id/rboff"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Off"></RadioButton>
 
-                        </RadioGroup>
-                    </LinearLayout>
+                    </RadioGroup>
+                </LinearLayout>
 
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
+
                     <TextView
                         android:id="@+id/txtLokasi"
                         android:layout_width="match_parent"
@@ -125,17 +136,19 @@
                         android:text="Lokasi" />
 
                     <Spinner
-                        android:padding="20dp"
                         android:id="@+id/sp_lokasi"
-                        android:entries="@array/lokasi"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"></Spinner>
+                        android:layout_height="wrap_content"
+                        android:entries="@array/lokasi"
+                        android:padding="20dp"></Spinner>
 
                 </FrameLayout>
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
+
                     <TextView
                         android:id="@+id/txtPenugasan"
                         android:layout_width="match_parent"
@@ -143,17 +156,19 @@
                         android:text="Penugasan" />
 
                     <Spinner
-                        android:padding="20dp"
                         android:id="@+id/sp_penugasan"
-                        android:entries="@array/penugasan"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"></Spinner>
+                        android:layout_height="wrap_content"
+                        android:entries="@array/penugasan"
+                        android:padding="20dp"></Spinner>
 
                 </FrameLayout>
 
                 <FrameLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:layout_margin="5dp">
+
                     <TextView
                         android:id="@+id/txtjadwal"
                         android:layout_width="wrap_content"
@@ -165,8 +180,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="100dp"
-                        android:text="HHmm"
-                         />
+                        android:text="HHmm" />
 
                     <TextView
                         android:id="@+id/txttext"
@@ -180,6 +194,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
+                    android:layout_margin="5dp"
                     android:orientation="vertical">
 
                     <Button
