--- a/app/src/main/res/layout/item_penugasan.xml
+++ b/app/src/main/res/layout/item_penugasan.xml
@@ -1,127 +1,112 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:card_view="http://schemas.android.com/tools"
+    android:id="@+id/cardView"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_gravity="center"
+    android:layout_marginLeft="8dp"
+    android:layout_marginTop="4dp"
+    android:layout_marginRight="8dp"
+    android:layout_marginBottom="4dp"
+    android:foregroundGravity="center"
+    app:layout_anchorGravity="center"
+    card_view:cardCornerRadius="4dp">
 
-    <android.support.v7.widget.CardView
-        android:layout_margin="5dp"
-        app:cardCornerRadius="6dp"
-        app:cardElevation="3dp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:foregroundGravity="center"
+        android:gravity="center"
+        android:padding="10dp"
+        android:orientation="vertical">
+
+        <ImageView
+            android:id="@+id/imageView5"
+            android:layout_width="70dp"
+            android:layout_height="70dp"
+            android:layout_gravity="center"
+            android:layout_margin="5dp"
+            app:srcCompat="@drawable/ic_assignment" />
+
+        <TextView
+            android:id="@+id/tvNamaMekanik"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="5dp"
+            android:text="Nama Mekanik"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <LinearLayout
-            android:padding="7dp"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal" >
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/border_solid"
+            android:foregroundGravity="center"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:layout_width="0dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:layout_weight="1"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:foregroundGravity="center"
+                android:gravity="center"
                 android:orientation="vertical">
 
-                <TextView
-                    android:id="@+id/txtNamaUser"
-                    android:layout_width="wrap_content"
+                <LinearLayout
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:maxLines="2"
-                    android:text="Nama User"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/grey_80"
-                     />
+                    android:layout_margin="2dp"
+                    android:orientation="vertical">
 
+                    <TextView
+                        android:id="@+id/tvAntrian"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="Tipe Antrian" />
 
-                <TextView
-                    android:id="@+id/txtPosisi"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text="Posisi"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                    <TextView
+                        android:id="@+id/tvLokasi"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="5dp"
+                        android:text="Lokasi Penugasan" />
 
-                <TextView
-                    android:id="@+id/txtLokasiPenugasan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text="Lokasi Penugasan"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
-                <TextView
-                    android:id="@+id/txtPenugasan"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text="Penugasan"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
-
-                <TextView
-                    android:id="@+id/txtTanggalSet"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text="Tanggal Set"
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                </LinearLayout>
 
 
             </LinearLayout>
 
             <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_gravity="top"
-                android:layout_weight="1"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_gravity="center"
+                android:layout_margin="10dp"
+                android:foregroundGravity="center"
+                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/txt"
+                    android:id="@+id/tvStart"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:maxLines="2"
-                    android:text=""
-                    android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
-                    android:textColor="@color/grey_80"
-                    android:textStyle="bold" />
-
+                    android:layout_marginLeft="5dp"
+                    android:text="Jam Mulai Kerja" />
 
                 <TextView
-                    android:id="@+id/t"
+                    android:id="@+id/tvFinish"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text=""
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
-
-                <TextView
-                    android:id="@+id/tx"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text=""
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
-                <TextView
-                    android:id="@+id/txtS"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text=""
-
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
-
-                <TextView
-                    android:id="@+id/txtNamaSet"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/spacing_medium"
-                    android:text="Nama Set"
-
-                    android:textAppearance="@style/TextAppearance.AppCompat.Caption" />
+                    android:layout_marginLeft="5dp"
+                    android:text="Jam Selesai Kerja" />
 
             </LinearLayout>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
+    </LinearLayout>
 
-</FrameLayout>
+</android.support.v7.widget.CardView>
