--- a/app/src/main/res/layout/activity_biaya_mekanik2.xml
+++ b/app/src/main/res/layout/activity_biaya_mekanik2.xml
@@ -49,19 +49,20 @@
 
                     <TextView
                         android:id="@+id/textView12"
-                        android:layout_width="200sp"
+                        android:layout_width="220sp"
                         android:layout_height="wrap_content"
-                        android:text="Upah Minimum Kota             :"
-                        android:textSize="15sp" />
+                        android:text="Upah Minimum Kota"
+                        android:textSize="14sp" />
 
                     <EditText
-                        android:id="@+id/editText6"
+                        android:id="@+id/txtUpakKota"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
                         android:hint="Rp."
-                        android:inputType="number" />
+                        android:inputType="number"
+                        android:textSize="14sp" />
 
                 </LinearLayout>
 
@@ -75,39 +76,18 @@
                         android:layout_width="200sp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Upah/Jam                              :"
-                        android:textSize="15sp" />
+                        android:text="Upah/Jam"
+                        android:textSize="14sp" />
 
                     <EditText
-                        android:id="@+id/editText7"
+                        android:id="@+id/txtUpahJam"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
                         android:hint="Rp."
-                        android:inputType="number" />
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/textView15"
-                        android:layout_width="200sp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="MIN Waktu Berbayar             :"
-                        android:textSize="15sp" />
-
-                    <EditText
-                        android:id="@+id/editText8"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:ems="10"
-                        android:inputType="number" />
+                        android:inputType="number"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -120,17 +100,42 @@
                         android:layout_width="200sp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Mekanik 1/ Jam                   :"
-                        android:textSize="15sp" />
+                        android:text="Mekanik 1/ Jam"
+                        android:textSize="14sp" />
 
                     <EditText
-                        android:id="@+id/editText9"
+                        android:id="@+id/txtMek1"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
                         android:hint="Rp."
-                        android:inputType="number" />
+                        android:inputType="number"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView15"
+                        android:layout_width="200sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Min Waktu Berbayar (Menit)"
+                        android:textSize="14sp" />
+
+                    <EditText
+                        android:id="@+id/txtMinWB1"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="Rp."
+                        android:inputType="number"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -143,17 +148,41 @@
                         android:layout_width="200sp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Mekanik 2/ Jam                   :"
-                        android:textSize="15sp" />
+                        android:text="Mekanik 2/ Jam"
+                        android:textSize="14sp" />
 
                     <EditText
-                        android:id="@+id/editText10"
+                        android:id="@+id/txtMek2"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
                         android:hint="Rp."
-                        android:inputType="number" />
+                        android:inputType="number"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView13"
+                        android:layout_width="200sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Min Waktu Berbayar (Menit)" />
+
+                    <EditText
+                        android:id="@+id/txtMinWB2"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="Rp."
+                        android:inputType="number"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <LinearLayout
@@ -166,17 +195,41 @@
                         android:layout_width="200sp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="Mekanik 3/ Jam                   :"
-                        android:textSize="15sp" />
+                        android:text="Mekanik 3/ Jam"
+                        android:textSize="14sp" />
 
                     <EditText
-                        android:id="@+id/editText11"
+                        android:id="@+id/txtMek3"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:ems="10"
                         android:hint="Rp."
-                        android:inputType="number" />
+                        android:inputType="number"
+                        android:textSize="14sp" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:id="@+id/textView19"
+                        android:layout_width="200sp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="Min Waktu Berbayar (Menit)" />
+
+                    <EditText
+                        android:id="@+id/txtMinWB3"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:ems="10"
+                        android:hint="Rp."
+                        android:inputType="number"
+                        android:textSize="14sp" />
                 </LinearLayout>
 
                 <Button
