--- a/app/src/main/res/layout/item_biaya_mekanik2.xml
+++ b/app/src/main/res/layout/item_biaya_mekanik2.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
 
@@ -18,35 +20,46 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/textView13"
+                    android:id="@+id/txtTgl"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Tanggal" />
 
                 <TextView
-                    android:id="@+id/textView19"
+                    android:id="@+id/txtUser"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="User" />
 
                 <TextView
-                    android:id="@+id/textView20"
+                    android:id="@+id/txtMeka1"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Mekanik 1" />
 
                 <TextView
-                    android:id="@+id/textView21"
+                    android:id="@+id/txtMeka2"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Mekanik 2" />
 
                 <TextView
-                    android:id="@+id/textView22"
+                    android:id="@+id/txtMeka3"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Mekanik 2" />
+
+                <android.support.design.widget.FloatingActionButton
+                    android:id="@+id/fabAddAturbiaya"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="right"
+                    android:layout_marginEnd="30sp"
+                    android:clickable="true"
+                    app:srcCompat="@drawable/ic_add" />
+
             </LinearLayout>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </FrameLayout>
