--- a/app/src/main/res/layout/jasalain_detail.xml
+++ b/app/src/main/res/layout/jasalain_detail.xml
@@ -93,7 +93,7 @@
                 android:textColor="@color/grey_40" />
 
             <TextView
-                android:id="@+id/txt"
+                android:id="@+id/txtMinWB2"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
