--- a/app/src/main/res/layout/jasalain_item.xml
+++ b/app/src/main/res/layout/jasalain_item.xml
@@ -55,7 +55,7 @@
                 android:orientation="vertical">
 
                 <TextView
-                    android:id="@+id/txt"
+                    android:id="@+id/txtMinWB2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:maxLines="2"
