--- a/app/src/main/res/layout/activity_list_basic.xml
+++ b/app/src/main/res/layout/activity_list_basic.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@android:color/white"
     android:orientation="vertical">
 
@@ -18,7 +19,10 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scrollbars="vertical"
-        android:scrollingCache="true" />
+        android:scrollingCache="true" >
+
+    </android.support.v7.widget.RecyclerView>
+
 
 </LinearLayout>
 
