--- a/app/src/main/res/layout/item_penugasan.xml
+++ b/app/src/main/res/layout/item_penugasan.xml
@@ -19,22 +19,14 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:foregroundGravity="center"
-        android:gravity="center"
-        android:padding="10dp"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/imageView5"
-            android:layout_width="70dp"
-            android:layout_height="70dp"
-            android:layout_gravity="center"
-            android:layout_margin="5dp"
-            app:srcCompat="@drawable/ic_assignment" />
+        android:orientation="vertical"
+        android:padding="10dp">
 
         <TextView
             android:id="@+id/tvNamaMekanik"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginBottom="5dp"
             android:text="Nama Mekanik"
             android:textSize="20sp"
@@ -50,7 +42,7 @@
 
             <LinearLayout
                 android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:foregroundGravity="center"
@@ -88,7 +80,6 @@
                 android:layout_gravity="center"
                 android:layout_margin="10dp"
                 android:foregroundGravity="center"
-                android:gravity="center"
                 android:orientation="vertical">
 
                 <TextView
