--- a/app/src/main/res/layout/activity_list_basic2.xml
+++ b/app/src/main/res/layout/activity_list_basic2.xml
@@ -11,7 +11,7 @@
         android:id="@+id/appbar"
 
         android:layout_width="match_parent"
-        android:layout_height="60sp"
+        android:layout_height="55sp"
         android:background="@color/blue_700">
 
         <include
@@ -21,10 +21,27 @@
 
     </android.support.design.widget.AppBarLayout>
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/rvListBasic2"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="match_parent">
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/rvListBasic2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+        </android.support.v7.widget.RecyclerView>
+
+        <android.support.design.widget.FloatingActionButton
+            android:id="@+id/fab_add_atur"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="320sp"
+            android:layout_marginTop="500sp"
+            android:clickable="true"
+            app:srcCompat="@drawable/ic_add" />
+
+    </FrameLayout>
 
 
 </LinearLayout>
