--- a/app/src/main/res/layout/activity_atur_penugasan_.xml
+++ b/app/src/main/res/layout/activity_atur_penugasan_.xml
@@ -48,7 +48,7 @@
 
         <LinearLayout
             android:id="@+id/layout_penugasan"
-            android:layout_width="300dp"
+            android:layout_width="320dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:layout_marginTop="20dp"
@@ -287,11 +287,21 @@
                 android:orientation="horizontal">
 
                 <Button
+                    android:id="@+id/btn_update"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/btn_rounded_accent"
+                    android:text="Edit"
+                    android:textColor="@color/white_transparency"
+                    android:visibility="gone" />
+
+                <Button
                     android:id="@+id/btn_hapus"
-                    android:layout_width="wrap_content"
+                    android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:background="@drawable/btn_rounded_accent"
                     android:text="Hapus"
+                    android:textColor="@color/white_transparency"
                     android:visibility="gone" />
 
                 <Button
